# examples

cpp/distributed/: CMakeLists.txt  dist-mnist.cpp
